# gefast

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: tests.yml
cmake/: CMakeRegistry.cmake  CompilerFlags.cmake  FindEigen3.cmake  LibraryConfig.cmake  SetEnv.cmake
gefast/: CMakeLists.txt  types.h  version.h.in
gefast/math/: cayley.cpp  cayley.h  rotation.cpp  rotation.h
gefast/solver/: generalized_eigensolver.cpp  generalized_eigensolver.h
gefast/util/: macros.h
include/math/: cayley.h
include/solver/: generalized_eigensolver.h
include/util/: macros.h
scripts/: build.sh  clang_format.sh
src/math/: cayley.cpp
src/solver/: generalized_eigensolver.cpp
tests/: CMakeLists.txt  test_generalized_eigensolver.cpp
